--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="bg-white py-24 sm:py-32 flex-grow">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-2xl lg:text-center">
-        <h2 class="text-base font-semibold leading-7 text-indigo-600">Mettre en avant ses réussites</h2>
+        <h2 class="text-base font-semibold leading-7 text-indigo-600">Mettre aaa en avant ses réussites</h2>
         <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Mes compétences clés</p>
         <p class="mt-6 text-lg leading-8 text-gray-600">Vous trouverez ci-dessous un ensemble de compétences techniques et humaines acquises tout au long de mon parcours.
         </p>
