--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="mt-16 mx-auto max-w-7xl px-6 lg:px-8">
         <div class="mx-auto max-w-2xl lg:text-center">
-            <h1 class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl underline">Mustapha Noussair - Spécialité Développement</h1>
+            <h1 class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl underline">Mustapha Noussair - Cybersécurité</h1>
         </div>
     </div>
    
@@ -30,36 +30,37 @@
               <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600 text-white">
                 1
               </div>
-              Point fort n°1
+              Connaissances en réseaux et systèmes d'exploitation
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Morbi viverra dui mi arcu sed. Tellus semper adipiscing suspendisse semper morbi. Odio urna massa nunc massa.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">Je possède de solides bases en réseaux informatiques , ainsi que sur les systèmes d'exploitation tels que Windows et Linux. Ces connaissances sont essentielles pour moi afin de comprendre comment les attaques ciblent les infrastructures et d'anticiper les menaces potentielles.
+              </dd>
           </div>
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
               <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600 text-white">
                 2
               </div>
-              Point fort n°2
+              Curiosité et capacité d'apprentissage rapide
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Sit quis amet rutrum tellus ullamcorper ultricies libero dolor eget. Sem sodales gravida quam turpis enim lacus amet.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">J'ai une forte volonté d'apprendre en continu les nouvelles menaces et technologies dans un domaine comme la cybersécurité, qui évolue rapidement. Je me tiens informé des dernières techniques d'attaque et de défense, ce qui me permet de rester à jour et de m'adapter rapidement aux changements.</dd>
           </div>
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
               <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600 text-white">
                 3
               </div>
-              Point fort n°3
+              Compétences en programmation et scripts
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Quisque est vel vulputate cursus. Risus proin diam nunc commodo. Lobortis auctor congue commodo diam neque.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">Je suis familier avec des langages comme Python, c++ et java , qui me permettent de comprendre le fonctionnement des systèmes et de développer des outils ou scripts pour automatiser certaines tâches de sécurité et renforcer les défenses.</dd>
           </div>
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
               <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600 text-white">
                4
               </div>
-              Point fort n°4
+              Esprit d'analyse et résolution de problèmes
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Arcu egestas dolor vel iaculis in ipsum mauris. Tincidunt mattis aliquet hac quis. Id hac maecenas ac donec pharetra eget.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">J'ai la capacité d'analyser des situations complexes, d'identifier les failles potentielles, et de proposer des solutions pratiques pour améliorer la sécurité des systèmes. Mon approche est méthodique, et j'aime relever les défis en matière de cybersécurité.</dd>
           </div>
     </div>
   </div>
@@ -81,36 +82,40 @@
               <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600 text-white">
                 1
               </div>
-              Axe d'amélioration n°1
+              Approfondissement des compétences en sécurité des réseaux
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Quisque est vel vulputate cursus. Risus proin diam nunc commodo. Lobortis auctor congue commodo diam neque.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">Développer une meilleure compréhension des protocoles de sécurité réseau et savoir configurer efficacement les équipements réseau comme les pare-feu et routeurs pour minimiser les failles de sécurité.
+
+            </dd>
           </div>
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
               <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600 text-white">
                 2
               </div>
-              Axe d'amélioration n°2
+              Renforcement des compétences en analyse de vulnérabilités
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Arcu egestas dolor vel iaculis in ipsum mauris. Tincidunt mattis aliquet hac quis. Id hac maecenas ac donec pharetra eget.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600"> Se former à l'utilisation d'outils spécifiques de détection et d'analyse de vulnérabilités, afin de mieux identifier et corriger les faiblesses des systèmes et applications. </dd>
           </div>
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
               <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600 text-white">
                 3
               </div>
-              Axe d'amélioration n°3
+              Maîtrise des aspects juridiques et de la conformité
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Quisque est vel vulputate cursus. Risus proin diam nunc commodo. Lobortis auctor congue commodo diam neque.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">Acquérir des connaissances sur les réglementations en cybersécurité et intégrer ces normes dans les politiques de sécurité d'une organisation pour assurer une conformité légale.
+
+            </dd>
           </div>
           <div class="relative pl-16">
             <dt class="text-base font-semibold leading-7 text-gray-900">
               <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600 text-white">
                 4
               </div>
-              Axe d'amélioration n°4
+              Développement de compétences en réponse aux incidents
             </dt>
-            <dd class="mt-2 text-base leading-7 text-gray-600">Arcu egestas dolor vel iaculis in ipsum mauris. Tincidunt mattis aliquet hac quis. Id hac maecenas ac donec pharetra eget.</dd>
+            <dd class="mt-2 text-base leading-7 text-gray-600">Apprendre à utiliser des outils de gestion des incidents et participer à des exercices de simulation de cyberattaques pour acquérir de l'expérience dans la gestion de crise et la réponse rapide aux cybermenaces.</dd>
           </div>
         </dl>
       </div>
@@ -136,7 +141,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Curriculum Vitae</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter &rarr;</a>
+            <a href="./Professional CV.pdf" class="text-indigo-600 font-medium">Consulter &rarr;</a>
         </div>
 
         <!-- Lettre de motivation -->
@@ -147,7 +152,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Lettre de motivation</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter &rarr;</a>
+            <a href="./MUSTAPHA NOUSSAIR                                                                                                 25.pdf" class="text-indigo-600 font-medium">Consulter &rarr;</a>
         </div>
 
         <!-- Message de motivation -->
@@ -158,7 +163,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Message de motivation</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter &rarr;</a>
+            <a href="./MUSTAPHA NOUSSAIR     MDM                                                                                          25.pdf" class="text-indigo-600 font-medium">Consulter &rarr;</a>
         </div>
 
         <!-- Mail de relance -->
@@ -169,7 +174,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Mail de relance</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter &rarr;</a>
+            <a href="./Objet.pdf" class="text-indigo-600 font-medium">Consulter &rarr;</a>
         </div>
     </div>
 </div>
@@ -185,7 +190,7 @@
 
     <!-- Image centrée -->
     <div class="flex justify-center">
-        <a href=""><img src="https://marketplace.canva.com/EAEg1P45hCw/1/0/1600w/canva-simple-travail-linkedin-banni%C3%A8re-VoKP4HFhK8A.jpg" alt="cliquez pour découvrir mon LinkdIn" class="rounded-lg shadow-md"></a>
+        <a href="https://www.linkedin.com/in/noussair-mustapha-56516732b/"><img src="./DALL·E 2024-09-25 13.51.54 - A LinkedIn banner with a creative, modern design for an IT professional. dit add .lThe background features shades of blue with a digital, tech-inspired theme. G.webp" alt="cliquez pour découvrir mon LinkdIn" class="rounded-lg shadow-md"></a>
     </div>
 </div>
 
@@ -209,7 +214,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Recherche d'alternance</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter le suivi &rarr;</a>
+            <a href="./tableau alternance.xlsx" class="text-indigo-600 font-medium">Consulter le suivi &rarr;</a>
         </div>
 
         <!-- Colonne 2 -->
@@ -219,7 +224,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Montée en compétence</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter la roadmap &rarr;</a>
+            <a href="./roadmap de compétences.xlsx" class="text-indigo-600 font-medium">Consulter la roadmap &rarr;</a>
         </div>
     </div>
 </div>
