--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
     <!-- Image centrée -->
     <div class="flex justify-center">
-        <a href="https://www.linkedin.com/in/noussair-mustapha-56516732b/"><img src="./DALL·E 2024-09-25 13.51.54 - A LinkedIn banner with a creative, modern design for an IT professional. dit add .lThe background features shades of blue with a digital, tech-inspired theme. G.webp" alt="cliquez pour découvrir mon LinkdIn" class="rounded-lg shadow-md"></a>
+        <a href="https://www.linkedin.com/in/noussair-mustapha-56516732b/"><img src="./Green Simple Manager LinkedIn Banner.png" alt="cliquez pour découvrir mon LinkdIn" class="rounded-lg shadow-md"></a>
     </div>
 </div>
 
